--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,6 +18,11 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Setup Python Poetry
         uses: abatilo/actions-poetry@v2.1.0
+      - name: Install dependencies
+        run: |
+          - poetry --version
+          - poetry install
+          - poetry show
       - name: Generate coverage report
         run: |
           poetry run pytest --cov=./ --cov-report=xml
