--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,10 +31,9 @@ jobs:
         with:
           name: codecov-umbrella
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage1.xml,./coverage2.xml
+          files: ./coverage.xml,./coverage
           directory: ./coverage/reports/
           flags: unittests
           env_vars: OS,PYTHON
           fail_ci_if_error: true
-          path_to_write_report: ./coverage/codecov_report.txt
           verbose: true
