--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,7 +25,7 @@ jobs:
           poetry show
       - name: Generate coverage report
         run: |
-          poetry run pytest --cov=./ --cov-report=xml
+          poetry run pytest --cov=version_helper --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
