--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,11 +29,9 @@ pytest-cov = "^2.12.1"
 
 [tool.pytest.ini_options]
 testpaths = "tests"
-addopts = "--tb=short"
+addopts = "--tb=short --cov=version_helper --cov-report=html --cov-report=xml"
 # --tb=short
 # --full-trace
-# --cov=version_helper
-# --cov-report=html
 # --showlocals
 # --setup-show
 # --setup-plan
