Add me (dl6nm) as owner explicitly for creating a new release

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -65,6 +65,7 @@ jobs:
         with:
           artifacts: "dist/*"
           draft: true
+          owner: dl6nm
           prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish Package
