--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ python = "^3.8"
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
 pytest-cov = "^2.12.1"
+pytest-datadir = "^1.3.1"
 
 [tool.pytest.ini_options]
 testpaths = "tests"
