--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -65,7 +65,7 @@ jobs:
         with:
           artifacts: "dist/*"
           draft: true
-          owner: dl6nm
+          owner: "dl6nm"
           prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish Package
