--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,7 +29,7 @@ jobs:
           poetry show
       - name: Generate coverage report
         run: |
-          poetry run pytest --cov=version_helper --cov-report=xml
+          poetry run pytest
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
