--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,13 +34,23 @@ pytest-datadir = "^1.3.1"
 
 [tool.pytest.ini_options]
 testpaths = "tests"
-addopts = "--tb=short --cov=version_helper --cov-report=html --cov-report=xml"
+addopts = "--tb=short --cov=version_helper --cov-report=html --cov-report=xml --cov-report=term"
 # --tb=short
 # --full-trace
 # --showlocals
 # --setup-show
 # --setup-plan
 # --disable-warnings
+
+[tool.coverage.paths]
+source = ["version_helper"]
+
+[tool.coverage.run]
+source = ["version_helper"]
+
+[tool.coverage.report]
+show_missing = true
+#fail_under = 100
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
