--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "version-helper"
-version = "0.2.1"
+version = "0.2.2-alpha.0"
 description = "Package for a better version management in python projects"
 authors = ["DL6NM <mail@dl6nm.de>"]
 license = "MIT"
@@ -8,11 +8,13 @@ readme = "README.md"
 repository = "https://github.com/dl6nm/version-helper"
 keywords = ["git", "describe", "tags", "version", "SemVer"]
 classifiers = [
+    "Development Status :: 3 - Alpha",
     "License :: OSI Approved :: MIT License",
     "Operating System :: MacOS",
     "Operating System :: Microsoft :: Windows",
     "Operating System :: POSIX :: Linux",
-    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Topic :: Software Development :: Version Control",
@@ -24,7 +26,7 @@ packages = [
 include = ["CHANGELOG.md"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
@@ -34,12 +36,7 @@ pytest-datadir = "^1.3.1"
 [tool.pytest.ini_options]
 testpaths = "tests"
 addopts = "--tb=short --cov=version_helper --cov-report=html --cov-report=xml --cov-report=term"
-# --tb=short
-# --full-trace
-# --showlocals
-# --setup-show
-# --setup-plan
-# --disable-warnings
+# --tb=short --full-trace --showlocals --setup-show --setup-plan --disable-warnings
 
 [tool.coverage.paths]
 source = ["version_helper"]
